--- a/src/app/@modules/map-page/map-page/map-page.component.scss
+++ b/src/app/@modules/map-page/map-page/map-page.component.scss
@@ -2,11 +2,12 @@
 agm-map{
     width:1000px;
     height:500px;
+ 
    
 }
 .mapSection{
  
-
+    border-radius: 50px;
 display: flex;
 justify-content: center;
     padding: 20px;
@@ -29,15 +30,24 @@ border-radius: 50px;
 }
 @media screen and (max-width:1000px){
     agm-map{
-        width:680px !important;
-        height:700px;
+        width:690px !important;
+        height:790px;
        
     }
 }
+@media screen and (max-width:500px){
+    agm-map{
+        width:690px !important;
+        height:790px;
+       
+    }
+}
+
 @media screen and(max-width:700px){
     agm-map{
-        width:500px !important;
-        height:700px;
+        margin: 50px 0;
+        width:570px !important;
+        height:790px;
        
     }
     .mapSection{
