--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <router-outlet></router-outlet>
 <ngx-spinner
-  bdColor="rgba(51,51,51,0.8)"
+  bdColor="rgba(0, 0, 0, 0.8)"
   size="medium"
   color="#fff"
-  type="ball-circus"
+  type="square-jelly-box"
+  [fullScreen]="true"
+  ><p style="color: white">Loading...</p></ngx-spinner
 >
-  <p style="font-size: 20px; color: white">Loading...</p>
-</ngx-spinner>
