--- a/src/app/@modules/weather-tracker/weather-tracker/weather-tracker.component.html
+++ b/src/app/@modules/weather-tracker/weather-tracker/weather-tracker.component.html
@@ -26,12 +26,12 @@
     </div>
 
     <div class="col2">
-      <h4>Speed of wind(kmph)</h4>
-      <div>{{ currentWeatherDetails?.current?.wind_kph }}</div>
+      <h4>wind(kmph)</h4>
+      <div>{{ currentWeatherDetails?.current?.wind_kph }} km/h</div>
     </div>
     <div class="col3">
-      <h4>Speed of wind(mph)</h4>
-      <div>{{ currentWeatherDetails?.current?.wind_mph }}</div>
+      <h4>wind(mph)</h4>
+      <div>{{ currentWeatherDetails?.current?.wind_mph }} m/h</div>
     </div>
     <div class="col4">
       <h4>Feels like in &#8451;</h4>
